<resources>
    <string name="app_name">LAB12</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ingresa_contrasena">Ingresa tu contraseña</string>
    <string name="ingresa_correo">Ingresa tu correo</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="correo">mor21146@uvg.edu.gt</string>
    <string name="cerrar_seión">Cerrar sesión</string>
    <string name="cerrar_sesión">Cerrar sesión</string>
    <string name="Nombre">Diego Morales</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="sesion_activa">Mantener sesión activa</string>
    <string name="text_opcion">Seleccione una opcion</string>
    <string name="success">Success</string>
    <string name="default_text">Default</string>
    <string name="failure">Failure</string>
    <string name="empty">Empty</string>
</resources>