<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".HomeFragment"
    tools:visibility="visible">
    <Button
        android:id="@+id/bt_mantenersession"
        android:backgroundTint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="@dimen/margen_pequeno"
        android:layout_marginTop="@dimen/margen_pequeno"
        android:text="@string/sesion_activa"
        app:layout_constraintBottom_toTopOf="@+id/bt_cerrarsesion"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_cerrarsesion"
        android:backgroundTint="@color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="@dimen/margen_pequeno"
        android:layout_marginTop="@dimen/margen_mediano"
        android:text="@string/cerrar_sesion"
        app:layout_constraintBottom_toTopOf="@+id/bt_default"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/bt_mantenersession" />

    <Button
        android:id="@+id/bt_default"
        android:backgroundTint="@color/black"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="@dimen/margen_pequeno"
        android:layout_marginTop="@dimen/margen_mediano"
        android:text="@string/default_text"
        android:textSize="@dimen/size_bt"
        app:layout_constraintEnd_toStartOf="@+id/bt_success"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/bt_cerrarsesion"
        />

    <Button
        android:id="@+id/bt_success"
        android:backgroundTint="@color/black"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="@dimen/margen_pequeno"
        android:layout_marginTop="@dimen/margen_mediano"
        android:text="@string/success"
        android:textSize="@dimen/size_bt"

        app:layout_constraintEnd_toStartOf="@+id/bt_failure"
        app:layout_constraintStart_toEndOf="@+id/bt_default"

        app:layout_constraintTop_toBottomOf="@+id/bt_cerrarsesion"
        />

    <Button
        android:id="@+id/bt_failure"
        android:backgroundTint="@color/black"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginStart="@dimen/margen_pequeno"
        android:layout_marginTop="@dimen/margen_mediano"
        android:text="@string/failure"
        android:textSize="@dimen/size_bt"

        app:layout_constraintEnd_toStartOf="@+id/bt_empty"
        app:layout_constraintStart_toEndOf="@+id/bt_success"

        app:layout_constraintTop_toBottomOf="@+id/bt_cerrarsesion" />

    <Button
        android:id="@+id/bt_empty"
        android:backgroundTint="@color/black"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="@dimen/margen_pequeno"
        android:layout_marginTop="@dimen/margen_mediano"
        android:text="@string/empty"
        android:textSize="@dimen/size_bt"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/bt_failure"

        app:layout_constraintTop_toBottomOf="@+id/bt_cerrarsesion" />

    <ImageView
        android:id="@+id/imageView"

        android:layout_width="@dimen/tamano_imagen"
        android:layout_height="@dimen/tamano_imagen"
        android:layout_marginBottom="@dimen/margen_pequeno"

        app:layout_constraintTop_toBottomOf="@+id/bt_empty"
        app:layout_constraintBottom_toTopOf="@id/text_status"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        tools:srcCompat="@tools:sample/avatars"
        app:layout_constraintVertical_chainStyle="packed"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/text_status"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        tools:text="@string/text_opcion"
        />

    <ProgressBar
        android:id="@+id/progressbar"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        app:layout_constraintTop_toBottomOf="@id/bt_empty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="invisible"
        />

</androidx.constraintlayout.widget.ConstraintLayout>